--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="col-12 text-center d-flex justify-content-center">
           <div class="card w-75 h-100 border-0 shadow p-2">
             <h1 class="cursive">Happy Mother's Day</h1>
-            <p class="p-1 words">You are the most amazing Mom we could have ever asked for. Without you we would not have the happy lives that we lead now. You pushed us to work harder and be better people every day. We wanted to express to you how much we appreciate all that you do and have done for us and to repay even the tiniest amount Below you will see pictures of flower pots you may recognize but decorated with some flowers that hopefully you like. Don't worry we will keep them alive until you get home. We love you so much and are so grateful for you and hope that you have an amazing day.</p>
+            <p class="p-1 words">You are the most amazing Mom we could have ever asked for. Without you we would not have the happy lives that we lead now. You pushed us to work harder and be better people every day. We wanted to express to you how much we appreciate all that you do and have done for us and to repay even the tiniest amount. Below you will see pictures of flower pots you may recognize but decorated with some flowers that hopefully you like. Don't worry we will keep them alive until you get home. We love you so much and are so grateful for you. We hope that you have an amazing day!</p>
             <p class="cursive">With love,</p>
             <h5 class="cursive">Your Children</h5>
           </div>
